--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -91,7 +91,9 @@
   }
   
   .menu-icon {
-    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   @media screen and (max-width: 960px) {
@@ -141,7 +143,10 @@
     }
   
     .menu-icon {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: middle;
+      padding-top: 2.5px;
       position: absolute;
       top: 0;
       right: 0;
